Closed Bug 595797 Opened 15 years ago Closed 15 years ago

"html" start tag handled incorrectly in the 'after after frameset' insertion mode

Categories

(Core :: DOM: HTML Parser, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: hsivonen, Assigned: hsivonen)

References

()

Details

Attachments

(1 file)

<frameset></frameset><html a=b> doesn't add the a=b attribute to the root element.
A test case will land as part of bug 559023.
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Attachment #474650 - Flags: review?(jonas)
Depends on: 559023
Priority: -- → P2
Comment on attachment 474650 [details] [diff] [review] Add "html" case to start tag handling in 'after after frameset' rs=me
Attachment #474650 - Flags: review?(jonas) → review+
Comment on attachment 474650 [details] [diff] [review] Add "html" case to start tag handling in 'after after frameset' Requesting approval for 2.0. This is a low-risk spec correctness fix. I don't dare to claim this should block 2.0, though.
Attachment #474650 - Flags: approval2.0?
Nominating as a blocker, because this already has a reviewed patch and not landing this together with my blockers makes the blockers harder to land.
blocking2.0: --- → ?
blocking2.0: ? → betaN+
Comment on attachment 474650 [details] [diff] [review] Add "html" case to start tag handling in 'after after frameset' Canceling approval request now that the bug is a blocker.
Attachment #474650 - Flags: approval2.0?
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: