Bug 595797 - Add the attributes of an <html> start tag to the root element if the <html> tag is seen after a frameset. rs=jonas, a=blocking2.0-betaN.