parser/html/nsHtml5TreeBuilder.cpp
@@ -1774,6 +1774,14 @@ nsHtml5TreeBuilder::startTag(nsHtml5ElementName* elementName, nsHtml5HtmlAttribu
       }
       case NS_HTML5TREE_BUILDER_AFTER_AFTER_FRAMESET: {
         switch(group) {
+          case NS_HTML5TREE_BUILDER_HTML: {
+
+            if (!fragment) {
+              addAttributesToHtml(attributes);
+              attributes = nsnull;
+            }
+            NS_HTML5_BREAK(starttagloop);
+          }
           case NS_HTML5TREE_BUILDER_NOFRAMES: {
             appendToCurrentNodeAndPushElementMayFoster(kNameSpaceID_XHTML, elementName, attributes);
             originalMode = mode;
